[package]
name = "keepass2vault"
version = "0.1.1"
edition = "2021"

[dependencies]
keepass = "0.5.0"
clap = { version = "4.0.15", default-features = true, features = ["env", "derive"] }
env_logger = "0.10.0"
log = "0.4.14"
vaultrs = "0.6.2"
serde = { version = "1.0.145", features = ["derive"] }
async-recursion = "1.0.0"
futures = "0.3.24"
async-std = { version = "1.12.0", features = ["tokio1"] }
tokio = { version = "1.21.2", features = ["macros"] }
